--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -23,7 +23,7 @@
     </button>
     <div class="collapse mt-1" id="collapseWidthButtonCalculator">
       <p class="mt-1 mb-1">Today you drove</p>
-      <h4><strong><%= @total_distance.round(2) %> km & <%= @total_time %> minutes</strong></h4>
+      <h4><strong><%= @total_distance.round(2) %> km and <%= @total_time %> minutes</strong></h4>
     </div>
   </div>
 </footer>
