--- a/app/views/analytics/_distance.html.erb
+++ b/app/views/analytics/_distance.html.erb
@@ -1,6 +1,6 @@
 <div class="text-center my-4">
   <h4>During this period, you drove</h4>
-  <h3><strong><%= @total_distance.round(2) %> km & <%= @total_time %> minutes</strong></h3>
+  <h3><strong><%= @total_distance.round(2) %> km and <%= @total_time %> minutes</strong></h3>
   <h3>for <strong><%= @appointments.count %></strong> appointments</h3>
 </div>
 <div class="row">
