--- a/app/views/analytics/index.html.erb
+++ b/app/views/analytics/index.html.erb
@@ -1,10 +1,10 @@
 <div class="container text-center">
   <div class="row align-items-center">
     <div class="col-9">
-      <h1>Analytics</h1>
+      <h1><%= t(".title") %></h1>
     </div>
     <div class="col-3">
-    <%= link_to 'Today', analytics_path(start_date: Date.today.strftime('%Y-%m-%d'), end_date: Date.today.strftime('%Y-%m-%d')), class: 'btn btn-outline-dark' %>
+    <%= link_to t('.today_button'), analytics_path(start_date: Date.today.strftime('%Y-%m-%d'), end_date: Date.today.strftime('%Y-%m-%d')), class: 'btn btn-outline-dark' %>
     </div>
   </div>
 </div>
@@ -14,19 +14,21 @@
     <div class="col-3">
         <%= link_to '-1', analytics_path(start_date: (@start_date - 1.day).strftime('%Y-%m-%d'), end_date: (@end_date - 1.day).strftime('%Y-%m-%d')), class: 'btn btn-outline-dark' %>
     </div>
+
     <div class="col-6">
       <div id="date-selection" data-controller="date-range">
         <%= form_tag analytics_path, method: :get, class: 'form-inline justify-content-center' do %>
           <div class="form-group">
-            <%= label_tag :start_date, 'Start date:', class: 'mr-2' %>
+            <%= label_tag :start_date, t('.start_date'), class: 'mr-2' %>
             <%= date_field_tag :start_date, @start_date, required: true, data: { action: "change->date-range#updateEndDateMin", date_range_target:"startDate" }, class: 'form-control mr-2' %>
-            <%= label_tag :end_date, 'End date:', class: 'mr-2' %>
+            <%= label_tag :end_date, t('.end_date'), class: 'mr-2' %>
             <%= date_field_tag :end_date, @end_date, required: true, data: { date_range_target: "endDate" }, class:'form-control mr-2 mb-2' %>
             <%= submit_tag 'Submit', class: 'w-100 btn btn-dark' %>
           </div>
         <% end %>
       </div>
     </div>
+
     <div class="col-3 ">
         <%= link_to '+1', analytics_path(start_date: (@start_date + 1.day).strftime('%Y-%m-%d'), end_date: (@end_date + 1.day).strftime('%Y-%m-%d')), class: 'btn btn-outline-dark' %>
     </div>
@@ -39,12 +41,14 @@
   <li class="nav-item" role="presentation">
     <button class="nav-link active" id="pills-first-tab" data-bs-toggle="pill" data-bs-target="#pills-first" type="button" role="tab" aria-controls="pills-first" aria-selected="true">Distance</button>
   </li>
+  
   <%# Appointments tab button %>
   <li class="nav-item" role="presentation">
     <button class="nav-link" id="pills-second-tab" data-bs-toggle="pill" data-bs-target="#pills-second" type="button" role="tab" aria-controls="pills-second" aria-selected="false">Appointments</button>
   </li>
 </ul>
 <div class="tab-content" id="pills-tabContent">
+
   <%# Distance tab content %>
   <div class="tab-pane fade show active" id="pills-first" role="tabpanel" aria-labelledby="pills-first-tab" tabindex="0">
     <%= render "distance", appointments: @appointments, total_distance: @total_distance, total_time: @total_time %>
