--- a/app/views/pages/_existing_user.html.erb
+++ b/app/views/pages/_existing_user.html.erb
@@ -1,21 +1,21 @@
 <div class="container mt-5">
   <h1>Hello, <%= current_user.name %> 👋</h1>
   <br>
-  <h3>What do you want to do?</h3>
+  <h3>Today is <%= Time.current.strftime("%d %B") %></h3>
   <div class="row p-1">
   <div class="col-sl-6 p-2">
     <div class="card">
-      <a href="/appointments" class="btn btn-primary"><h2>Appointments</h2></a>
+      <a href="/appointments" class="btn btn-primary"><h2>Add appointments</h2></a>
     </div>
   </div>
   <div class="col-sm-6 p-2">
     <div class="card border-dark">
-      <a href="/analytics" class="btn btn-light"><h2>Analytics</h2></a>
+      <a href="/analytics" class="btn btn-light"><h2>Stats</h2></a>
     </div>
   </div>
   <div class="col-sm-6 p-2">
     <div class="card border-dark">
-      <a href="/patients" class="btn btn-light"><h2>Patients</h2></a>
+      <a href="/patients" class="btn btn-light"><h2>All patients</h2></a>
     </div>
   </div>
   <div class="col-sm-6 p-2">
@@ -30,7 +30,7 @@
   </div>
   <div class="col-sm-6 p-2">
     <div class="card border-dark">
-      <a href="/users/edit" class="btn btn-light"><h2>Edit my account</h2></a>
+      <a href="#" class="btn btn-light"><h2>Share feedback</h2></a>
     </div>
   </div>
 </div>
