Revert "removed '-' and '&' in front of numbers"
This reverts commit 02ab8532f7033e0525df676fb4fd1adc4f9302f2.

--- a/app/views/analytics/_distance.html.erb
+++ b/app/views/analytics/_distance.html.erb
@@ -1,5 +1,8 @@
 <div class="text-center my-4">
-  <h4>  <% t(".title_html") %>  </h4>
+  <%# <h4>  <% t(".title_html") %>  </h4> %>
+  <h4>During this period, you drove</h4>
+  <h3><strong><%= @total_distance.round(2) %> km & <%= @total_time %> minutes</strong></h3>
+  <h3>for <strong><%= @appointments.count %></strong> appointments</h3>
 </div>
 
 <div class="row">
@@ -9,5 +12,3 @@
     </div>
   <% end %>
 </div>
-
-
