--- a/app/views/analytics/_appointments.html.erb
+++ b/app/views/analytics/_appointments.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <%# <h4><%= t(".appointments", count: @appointments.size) %></h4> %>
+  <%# <h4><%= t(".appointments", count: @appointments.size) %>
   <h4>For each patient, you spent the following time</h4>
     <ul class="list-group list-group-flush">
       <% @appointments.each do |appointment| %>
