--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -5,7 +5,7 @@
   <div class="card-body">
     <h2 class="card-title">👤 <%= @patient.name %></h2>
       <% if @patient.address.latitude.nil? || @patient.address.longitude.nil? %>
-        <h4>This patient has no valid location, please update it.</h4>
+        <h4><%= t('.no_location') %></h4>
       <% else %>
         <div class="card-body">
           <%= static_map([{latitude: @patient.address.latitude, longitude: @patient.address.longitude}], width: 250, height: 300) %>
@@ -13,28 +13,27 @@
       <% end %>
     <p class="card-text">📍 <%= @patient.address.full_address %></p>
     <a href="https://www.google.com/maps/dir/?api=1&amp;destination=<%= @patient.address.latitude %>,
-      <%= @patient.address.longitude %>&amp;travelmode=driving" target="_blank" class="btn btn-primary mb-3">Drive me there
-      </a>
+      <%= @patient.address.longitude %>&amp;travelmode=driving" target="_blank" class="btn btn-primary mb-3"><%= t('.drive_me', name: @patient.name) %></a>
     <p class="card-text">
-      <strong>🗓️ Total appointments:</strong> <%= @patient.appointments.count %>
+      <strong><%= t('.total_appointments') %>:</strong> <%= @patient.appointments.count %>
     </p>
     <p class="card-text">
-      <strong>🕰️ Time spent with this patient:</strong> <%= @total_time_spent_with_patient %> hours
+      <strong><%= t('.time_spent') %>:</strong> <%= @total_time_spent_with_patient %> <%= t('.hours') %>
     </p>
     <p class="card-text">
       <ul class="list-group list-group-flush">
         <% @patient.appointments.sort_by(&:start_time).reverse.each do |appointment| %>
           <li class="list-group-item">
-            <%= appointment.start_time.strftime("%Y, %B %d") %> -
-            <%= ((appointment.end_time - appointment.start_time) / 60).to_i %></strong> minutes
+            <%= l(appointment.start_time, format: :long) %> -
+            <%= ((appointment.end_time - appointment.start_time) / 60).to_i %> <%= t('.minutes') %>
           </li>
         <% end %>
       </ul>
     </p>
   </div>
   <ul class="list-group list-group-flush">
-    <li class="list-group-item"><%= link_to "Back to patients", patients_path%></li>
-    <li class="list-group-item"><%= link_to "Edit patient", edit_patient_path(@patient) %></li>
-    <li class="list-group-item"><%= button_to "Delete this patient", @patient, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger", title: "Delete" %></li>
+    <li class="list-group-item"><%= link_to t('.back_to_patients'), patients_path%></li>
+    <li class="list-group-item"><%= link_to t('.edit_patient'), edit_patient_path(@patient) %></li>
+    <li class="list-group-item"><%= button_to t('.delete_patient'), @patient, method: :delete, data: { confirm: t('.confirm_delete') }, class: "btn btn-danger", title: t('.delete') %></li>
   </ul>
 </div>
