--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -1,9 +1,9 @@
-<h1>You are editing <%= @client.name %></h1>
+<h1><%= t(".title", name: @client.name) %></h1>
 
 <%= render "form", client: @client %>
 
 <br>
 
 <div>
-  <%= link_to "Back to clients", clients_path, class: "btn btn-secondary" %>
+  <%= link_to t(".back_to_clients"), clients_path, class: "btn btn-secondary mt-2" %>
 </div>
