--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -1,11 +1,11 @@
 <div class="container">
   <div class="row">
-    <h3 class="text-center my-4">You are creating a new client</h3>
+    <h3 class="text-center my-4"><%= t(".new_client") %></h3>
     <div class="col-md-6 offset-md-3">
       <%= render "form", client: @client %>
     </div>
     <div class="col-md-6 offset-md-3 mt-3">
-      <%= link_to "Back to clients", clients_path, class: "btn btn-secondary" %>
+      <%= link_to t(".back_to_clients"), clients_path, class: "btn btn-secondary"%>
     </div>
   </div>
 </div>
