--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -2,13 +2,13 @@
 
 <div class="card">
   <div class="card-body">
-    <h2 class="card-title">👤 <%= @client.name %></h2>
-    <p class="card-text">📧 <%= @client.email %></p>
-    <a href="#" class="btn btn-primary mt-1">Send monthly report</a>
+    <h2 class="card-title">👤 <%= t(".client_name", name: @client.name) %></h2>
+    <p class="card-text">📧 <%= t(".client_email", email: @client.email) %></p>
+    <a href="#" class="btn btn-primary mt-1"><%= t(".send_report") %></a>
   </div>
   <ul class="list-group list-group-flush">
-    <li class="list-group-item"><%= link_to "Back to clients", clients_path%></li>
-    <li class="list-group-item"><%= link_to "Edit this client", edit_client_path(@client) %></li>
-    <li class="list-group-item"><%= button_to "Delete this client", @client, method: :delete, class: "btn btn-danger", title: "Delete" %></li>
+    <li class="list-group-item"><%= link_to t(".back_to_clients"), clients_path%></li>
+    <li class="list-group-item"><%= link_to t(".edit_client"), edit_client_path(@client) %></li>
+    <li class="list-group-item"><%= button_to t(".delete_client"), @client, method: :delete, class: "btn btn-danger", title: "Delete" %></li>
   </ul>
 </div>
