--- a/app/views/patients/_patient.html.erb
+++ b/app/views/patients/_patient.html.erb
@@ -6,8 +6,7 @@
       </h5>
 
       <p class="card-text">
-        <strong>📍</strong>
-        <%= patient.address.full_address %>
+        <strong>📍 <%= patient.address.full_address %></strong>
       </p>
     </div>
   <% end %>
