--- a/app/views/patients/new.html.erb
+++ b/app/views/patients/new.html.erb
@@ -1,11 +1,11 @@
 <div class="container">
   <div class="row">
-    <h3 class="text-center my-4">You are creating a new patient</h3>
+    <h3 class="text-center my-4"><%= t(".title") %></h3>
     <div class="col-md-6 offset-md-3">
       <%= render "form", patient: @patient %>
     </div>
     <div class="col-md-6 offset-md-3 mt-3">
-      <%= link_to "Back to patients", patients_path, class: "btn btn-secondary" %>
+      <%= link_to t(".back_to_patients"), patients_path, class: "btn btn-secondary" %>
     </div>
   </div>
 </div>
