--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<h2>Edit my account</h2>
+<h2><%= t(".title") %></h2>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= f.error_notification %>
@@ -7,12 +7,22 @@
     <%= f.input :name, required: true, autofocus: true, class: "form-control" %>
     <%= f.input :last_name, required: false, autofocus: true %>
     <%= f.input :email, required: true, autofocus: true %>
-    <%= f.label "Select your time zone" %> <br>
-    <%= f.time_zone_select :time_zone, nil, default: browser_time_zone.name %> <br>
-    <%= f.label "Select your language" %> <br>
-    <%# <%= form_tag people_path, :class => 'locale' do %>
-      <%# <%= select_tag 'set_locale', options_for_select(LANGUAGES, I18n.locale.to_s), :onchange => 'this.form.submit()' %>
-    <%# <% end %>
+
+    <p class="my-1"><%= t(".select_time") %></p>
+    <%= f.time_zone_select :time_zone, nil, {default: browser_time_zone.name}, {:class => 'form-control'} %>
+
+    <p class="my-1"><%= t(".select_language") %></p>
+    <div class="dropdown mb-1">
+      <a class="dropdown-toggle text-dark form-control text-decoration-none" href="#" role="button" id="localeDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+        <%= t('.language') %>
+      </a>
+      <ul class="dropdown-menu" aria-labelledby="localeDropdown">
+        <%= link_to "Italiano", url_for(locale: :it), class: "dropdown-item" %>
+        <%= link_to "English", url_for(locale: :en), class: "dropdown-item" %>
+        <%= link_to "Deutsch", url_for(locale: :de), class: "dropdown-item" %>
+        <%= link_to "Français", url_for(locale: :fr), class: "dropdown-item" %>
+      </ul>
+    </div>
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
@@ -43,8 +53,7 @@
 <br>
 
 <div>
-  <h4>Dangerous area</h4>
-  <p>⚠️ This action is not reversible ⚠️</p>
+  <h4 class="m-4">Dangerous area - This action is not reversible</h4>
 
   <%= button_to "Delete my account",
   registration_path(resource_name),
