--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -55,8 +55,8 @@
     <h4 class="lead pt-3 pb-3"><%= t('.manage_ease') %></h4>
     <div class="col-lg-6 mx-auto">
       <div class="d-grid gap-2 mb-5">
-        <a class="btn btn-primary btn-lg" href="<%= new_user_registration_path %>" role="button"><%= t('.sign_up') %></a>
-        <a class="btn btn-outline-dark btn-lg" href="<%= new_user_session_path %>" role="button"><%= t('.sign_in') %></a>
+        <a class="btn btn-primary btn-lg d-md-none d-lg-none" href="<%= new_user_registration_path %>" role="button"><%= t('.sign_up') %></a>
+        <a class="btn btn-outline-dark btn-lg d-md-none d-lg-none" href="<%= new_user_session_path %>" role="button"><%= t('.sign_in') %></a>
       </div>
     </div>
     <div class="overflow-hidden" style="max-height: 30vh;">
