--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -25,9 +25,10 @@
                     class: "form-control",
                     id: "floatingInput",
                     placeholder: "name@email.com" %>
-        <%= f.time_zone_select :time_zone, nil,
-                                { default: browser_time_zone.name },
-                                { class: "form-control" } %>
+
+    <p class="my-1"><%= t(".select_time_zone") %></p>
+    <%= f.time_zone_select :time_zone, nil, {default: browser_time_zone.name}, {:class => 'form-control'} %>
+
         <%= f.input :password,
                     required: true,
                     hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
