--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,12 @@
   </head>
 
   <body class="bg-light">
+  <header>
     <%= render "shared/navbar" %>
+    <%= render "shared/flashes" %>
+  </header>
     <div class="content container px-3 pb-1">
       <%= yield %>
     </div>
-    <%= render "shared/flashes" %>
   </body>
 </html>
