enhance and fix translations

--- a/app/views/shared/_flashes.html.erb
+++ b/app/views/shared/_flashes.html.erb
@@ -1,5 +1,5 @@
 <% if notice %>
-  <div class="alert alert-success alert-dismissible fade show fixed-bottom" role="alert">
+  <div class="alert alert-success alert-dismissible fade show" role="alert">
     <%= notice %>
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
     </button>
@@ -7,7 +7,7 @@
 <% end %>
 
 <% if alert %>
-  <div class="alert alert-warning alert-dismissible fade show fixed-bottom" role="alert">
+  <div class="alert alert-warning alert-dismissible fade show" role="alert">
     <%= alert %>
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
     </button>
@@ -15,7 +15,7 @@
 <% end %>
 
 <% if flash[:error] %>
-  <div class="alert alert-danger alert-dismissible fade show fixed-bottom" role="alert">
+  <div class="alert alert-danger alert-dismissible fade show" role="alert">
     <%= flash[:error] %>
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
     </button>
