--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     <%= render "shared/navbar" %>
     <%= render "shared/flashes" %>
   </header>
-    <div class="content container px-3 pb-1 col-md-6 col-lg-">
+    <div class="content container px-3 pb-1 col-md-10 col-lg-12">
       <%= yield %>
     </div>
   </body>
