--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -27,7 +27,7 @@
                     placeholder: "name@email.com" %>
 
     <p class="my-1"><%= t(".select_time_zone") %></p>
-    <%= f.time_zone_select :time_zone, nil, {default: browser_time_zone.name}, {:class => 'form-control'} %>
+    <%= f.time_zone_select :time_zone, ActiveSupport::TimeZone.country_zones('CH'), {default: browser_time_zone}, {:class => 'form-control py-1'} %>
 
         <%= f.input :password,
                     required: true,
